--- a/wp-content/themes/norcal-sbdc/config.json
+++ b/wp-content/themes/norcal-sbdc/config.json
@@ -9,18 +9,16 @@
 	],
 
 	"color_palette": [
-		{ "name": "Blue", "slug": "blue", "color": "#007bff" },
-		{ "name": "Indigo", "slug": "indigo", "color": "#6610f2" },
-		{ "name": "Purple", "slug": "purple", "color": "#6f42c1" },
-		{ "name": "Pink", "slug": "pink", "color": "#e83e8c" },
-		{ "name": "Red", "slug": "red", "color": "#dc3545" },
-		{ "name": "Orange", "slug": "orange", "color": "#fd7e14" },
-		{ "name": "Yellow", "slug": "yellow", "color": "#ffc107" },
-		{ "name": "Green", "slug": "green", "color": "#28a745" },
-		{ "name": "Teal", "slug": "teal", "color": "#20c997" },
-		{ "name": "Cyan", "slug": "cyan", "color": "#17a2b8" },
+		{ "name": "Dark Blue", "slug": "dark-blue", "color": "#233053" },
+		{ "name": "Blue", "slug": "blue", "color": "#108DBC" },
+		{ "name": "Light Blue", "slug": "light-blue", "color": "#D0E4F8" },
+		{ "name": "Extra Light Blue", "slug": "x-light-blue", "color": "#F4F8FD" },
+		{ "name": "Red", "slug": "red", "color": "#D44457" },
+		{ "name": "Green", "slug": "green", "color": "#AED540" },
+		{ "name": "Light Gray", "slug": "light-gray", "color": "#E6EDF4" },
+		{ "name": "Gray", "slug": "gray", "color": "#7F94AA" },
 		{ "name": "Dark Gray", "slug": "dark-gray", "color": "#343a40" },
-		{ "name": "Ghost", "slug": "ghost", "color": "#FAFAFA" },
+		{ "name": "Ghost", "slug": "ghost", "color": "#F1F4F7" },
 		{ "name": "White", "slug": "white", "color": "#FFFFFF" }
 	],
 
