--- a/wp-content/themes/norcal-sbdc/config.json
+++ b/wp-content/themes/norcal-sbdc/config.json
@@ -15,7 +15,7 @@
 		{ "name": "Blue", "slug": "blue", "color": "#108DBC" },
 		{ "name": "Light Blue", "slug": "light-blue", "color": "#D0E4F8" },
 		{ "name": "Extra Light Blue", "slug": "x-light-blue", "color": "#F4F8FD" },
-		{ "name": "Red", "slug": "red", "color": "#D44457" },
+		{ "name": "Red", "slug": "red", "color": "#E60045" },
 		{ "name": "Green", "slug": "green", "color": "#AED540" },
 		{ "name": "Light Gray", "slug": "light-gray", "color": "#E6EDF4" },
 		{ "name": "Gray", "slug": "gray", "color": "#7F94AA" },
