--- a/wp-content/themes/norcal-sbdc/config.json
+++ b/wp-content/themes/norcal-sbdc/config.json
@@ -12,16 +12,18 @@
 
 	"color_palette": [
 		{ "name": "Dark Blue", "slug": "dark-blue", "color": "#233053" },
-		{ "name": "Dark Medium Blue", "slug": "dark-med-blue", "color": "#1d406e" },
-		{ "name": "Blue", "slug": "blue", "color": "#108DBC" },
+		{ "name": "Dark Medium Blue", "slug": "dark-med-blue", "color": "#012D61" },
+		{ "name": "Blue", "slug": "blue", "color": "#0381C3" },
+		{ "name": "Light Medium Blue", "slug": "light-med-blue", "color": "#98DBF9" },
 		{ "name": "Light Blue", "slug": "light-blue", "color": "#D0E4F8" },
 		{ "name": "Extra Light Blue", "slug": "x-light-blue", "color": "#F4F8FD" },
-		{ "name": "Red", "slug": "red", "color": "#E60045" },
-		{ "name": "Green", "slug": "green", "color": "#AED540" },
-		{ "name": "Light Gray", "slug": "light-gray", "color": "#E6EDF4" },
-		{ "name": "Gray", "slug": "gray", "color": "#7F94AA" },
+		{ "name": "Red", "slug": "red", "color": "#F7024D" },
+		{ "name": "Green", "slug": "green", "color": "#84C318" },
+		{ "name": "Light Gray", "slug": "light-gray", "color": "#CFD2D8" },
+		{ "name": "Gray", "slug": "gray", "color": "#696D7D" },
+		{ "name": "Rain", "slug": "rain", "color": "#6A8EAE" },
 		{ "name": "Dark Gray", "slug": "dark-gray", "color": "#343a40" },
-		{ "name": "Ghost", "slug": "ghost", "color": "#F1F4F7" },
+		{ "name": "Ghost", "slug": "ghost", "color": "#E0E0E0" },
 		{ "name": "White", "slug": "white", "color": "#FFFFFF" }
 	],
 
