Updating a couple of theme colors

--- a/wp-content/themes/norcal-sbdc/config.json
+++ b/wp-content/themes/norcal-sbdc/config.json
@@ -11,13 +11,13 @@
 	],
 
 	"color_palette": [
-		{ "name": "Dark Blue", "slug": "dark-blue", "color": "#233053" },
+		{ "name": "Dark Blue", "slug": "dark-blue", "color": "#032040" },
 		{ "name": "Dark Medium Blue", "slug": "dark-med-blue", "color": "#012D61" },
 		{ "name": "Blue", "slug": "blue", "color": "#0381C3" },
 		{ "name": "Light Medium Blue", "slug": "light-med-blue", "color": "#98DBF9" },
 		{ "name": "Light Blue", "slug": "light-blue", "color": "#D0E4F8" },
 		{ "name": "Extra Light Blue", "slug": "x-light-blue", "color": "#F4F8FD" },
-		{ "name": "Red", "slug": "red", "color": "#F7024D" },
+		{ "name": "Red", "slug": "red", "color": "#D11141" },
 		{ "name": "Green", "slug": "green", "color": "#84C318" },
 		{ "name": "Light Gray", "slug": "light-gray", "color": "#CFD2D8" },
 		{ "name": "Gray", "slug": "gray", "color": "#696D7D" },
