Updating regional footer

--- a/wp-content/themes/norcal-sbdc/config.json
+++ b/wp-content/themes/norcal-sbdc/config.json
@@ -47,6 +47,7 @@
 		{ "name": "Header: Primary Navigation", "slug": "header_primary" },
 		{ "name": "Header: CTA Links", "slug": "header_cta_links" },
 		{ "name": "Mobile Menu: Primary Navigation", "slug": "mobile_menu_primary" },
+		{ "name": "Footer: CTA Links", "slug": "footer_cta_links" },
 		{ "name": "Footer: Legal Links", "slug": "footer_legal_links" }
 	],
 
