--- a/wp-content/themes/norcal-sbdc-ip/config.json
+++ b/wp-content/themes/norcal-sbdc-ip/config.json
@@ -1,6 +1,7 @@
 {
 
 	"color_palette": [
+		{ "name": "Dark Blue", "slug": "dark-blue", "color": "#1D2F3C" },
 		{ "name": "Blue", "slug": "blue", "color": "#0081B7" },
 		{ "name": "Magenta", "slug": "magenta", "color": "#D50679" },
 		{ "name": "Yellow", "slug": "yellow", "color": "#FEC403" },
