--- a/wp-content/themes/norcal-sbdc-ip/config.json
+++ b/wp-content/themes/norcal-sbdc-ip/config.json
@@ -9,6 +9,10 @@
 		{ "name": "Dark Gray", "slug": "dark-gray", "color": "#2C3E4B" },
 		{ "name": "Ghost", "slug": "ghost", "color": "#E0E0E0" },
 		{ "name": "White", "slug": "white", "color": "#FFFFFF" }
+	],
+
+	"gradient_palette": [
+		{ "name": "Red to Blue", "slug": "red-blue", "gradient": "linear-gradient(135deg, #835B53 0%, #29547D 100%)" }
 	]
 
 }
