--- a/wp-content/themes/norcal-sbdc/package.json
+++ b/wp-content/themes/norcal-sbdc/package.json
@@ -7,15 +7,14 @@
 	"license": "GPL-3.0",
 	"devDependencies": {
 		"gulp": "^4.0.0",
-		"gulp-autoprefixer": "^6.1.0",
-		"gulp-bless": "^4.0.0",
+    	"gulp-load-plugins": "^2.0.0",
+		"gulp-sass": "^5.1.0",
+		"gulp-autoprefixer": "^8.0.0",
 		"gulp-cssnano": "^2.1.0",
-		"gulp-load-plugins": "^1.5.0",
-		"gulp-notify": "^3.2.0",
-		"gulp-rename": "^1.4.0",
-		"gulp-sass": "^4.0.2",
-		"gulp-sourcemaps": "^2.6.0",
+		"gulp-notify": "^4.0.0",
+		"gulp-rename": "^2.0.0",
+		"gulp-sourcemaps": "^3.0.0",
 		"gulp-uglify": "^3.0.0",
-		"node-sass": "^4.13.1"
+		"sass": "^1.69.0"
 	}
 }
